Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
Impala 2.3.0
-
None
-
None
Description
A recent change to tuple pointer allocation in rowbatch means that the pointers are no longer counted towards the query or impalad memory limit. If there are many row batches in flight in a given query (many nodes, high concurrency, etc), then this may make it possible to overrun the specified memory limit. We should track these allocations with the row batch's memory tracker.
Attachments
Issue Links
- blocks
-
IMPALA-2378 Impalad exceeded its mem limit
- Resolved